# rball

./: .gitignore  Cargo.toml  Makefile  README.md
godot/: export_presets.cfg  project.godot
godot/assets/balls/: soccer-ball.png.import
godot/assets/football-fields/: field.png.import
godot/assets/godot-ferris/: godot-ferris-1024x1024.png.import  godot-ferris-120x120.png.import  godot-ferris-128x128.png.import  godot-ferris-16x16.png.import  godot-ferris-32x32.png.import  godot-ferris-64x64.png.import  godot-ferris-76x76.png.import
godot/assets/logo/: logo_color.png.import  logo_white.png.import
godot/native/: Ball.gd  Button.gd  Enemy.gd  Game.gd  Network.gd  Player.gd  TeamManager.gd  TeamManager_StartButton.gd
godot/scenes/: Background.tscn  Ball.tscn  Enemy.tscn  Game.tscn  Introduce.tscn  Player.tscn  TeamManager.tscn
rust/server/: Cargo.toml
rust/server/src/: main.rs  network.rs  observer.rs  state.rs  world.rs
rust/shared/: Cargo.toml
rust/shared/src/: client.rs  message.rs
