[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version = "0.11.1", features = [ "simd-stable" ] }
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.5"
laminar = "0.5.0"
serde = "1.0.130"
serde_json = "1.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.9.0"
shared = { path = "../shared" }